--- a/www.nass.gov.ng/4cf84f4153fb5b9750864898396bf71088e3e20a.yml
+++ b/www.nass.gov.ng/4cf84f4153fb5b9750864898396bf71088e3e20a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:04:46 GMT
+    - Wed, 21 Jun 2017 02:10:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j8T5D1nwABjwQ%2C9ye8R631; path=/
+    - PHPSESSID=N4ZxYybD-blF4uds3UjVC3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:04:46 GMT
+recorded_at: Wed, 21 Jun 2017 02:10:50 GMT
