--- a/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
+++ b/www.nass.gov.ng/c9a42970e8edc4178f65bad2db5771c46367a2c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:05:05 GMT
+    - Wed, 21 Jun 2017 02:11:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EPiagUkBaKEEl%2CxzOnzV71; path=/
+    - PHPSESSID=X4-zIJ3ovdX2wEPZ80kJ52; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:05:05 GMT
+recorded_at: Wed, 21 Jun 2017 02:11:10 GMT
