--- a/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
+++ b/www.nass.gov.ng/37ca2108cd6d2c0c936710568960a17d3e81a7d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:07:07 GMT
+    - Wed, 21 Jun 2017 02:13:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Cx3ficCGM1fK5SAG4IyAk3; path=/
+    - PHPSESSID=P8c8zX7w3il983orKuIZQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:07:07 GMT
+recorded_at: Wed, 21 Jun 2017 02:13:01 GMT
