--- a/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
+++ b/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:08:21 GMT
+    - Wed, 21 Jun 2017 02:14:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kZl-NCqlcVf%2CFApGg6%2CGa0; path=/
+    - PHPSESSID=ojgg5hDCtoH8c%2C3bVO9R-1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:08:21 GMT
+recorded_at: Wed, 21 Jun 2017 02:14:38 GMT
