--- a/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
+++ b/www.nass.gov.ng/70ad86e9f44c15d1f096c47097bee16f9af54608.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:09:48 GMT
+    - Wed, 21 Jun 2017 02:16:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zQeciDPo9GTLO0cBnfFj32; path=/
+    - PHPSESSID=MP7mJy2U%2CrB6K%2CKQxcvtM3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:09:48 GMT
+recorded_at: Wed, 21 Jun 2017 02:16:43 GMT
