--- a/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
+++ b/www.nass.gov.ng/682f5b1270d522b821f26c13476fbddd817f85bc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:14:15 GMT
+    - Wed, 21 Jun 2017 02:21:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b8jQ8kAACdbiYO85yQ36L2; path=/
+    - PHPSESSID=SDwoD9F7McxMYZca6j%2CRL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:14:15 GMT
+recorded_at: Wed, 21 Jun 2017 02:21:22 GMT
