--- a/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
+++ b/www.nass.gov.ng/eabb9d2ca0da5a52b2eb24d40c88eea8c4845cbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:16:01 GMT
+    - Wed, 21 Jun 2017 02:23:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LZtbHyFp85dHtb%2CNjvRUt3; path=/
+    - PHPSESSID=sFz6wwy2Tm3JN7%2CIAWPN50; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:16:01 GMT
+recorded_at: Wed, 21 Jun 2017 02:23:35 GMT
