--- a/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
+++ b/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:20:15 GMT
+    - Wed, 21 Jun 2017 02:28:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WbvbKir3cxesubZJMn3dG2; path=/
+    - PHPSESSID=5tUHTD-L6GyVe%2C7JFklZu2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:20:16 GMT
+recorded_at: Wed, 21 Jun 2017 02:28:37 GMT
