--- a/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
+++ b/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:20:35 GMT
+    - Wed, 21 Jun 2017 02:28:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dvORehqdd8WP25%2CsWwqvj3; path=/
+    - PHPSESSID=nbhna48Kd-mVW0lvPKA582; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:20:35 GMT
+recorded_at: Wed, 21 Jun 2017 02:28:55 GMT
