--- a/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
+++ b/www.nass.gov.ng/f845e9156ae71d24da31ab411b67c06f231cfa93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:26:53 GMT
+    - Wed, 21 Jun 2017 02:35:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SlJDXO6pV8rvJJ-eQ1z%2Cw0; path=/
+    - PHPSESSID=76YeXGlXo%2CRm4enH4O1yv0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:26:53 GMT
+recorded_at: Wed, 21 Jun 2017 02:35:21 GMT
