--- a/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
+++ b/www.nass.gov.ng/5528b9312ad0a97c758c8ecfa95f589416853607.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:27:38 GMT
+    - Wed, 21 Jun 2017 02:35:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9-eXAAhQmdGWL2o5AFadN3; path=/
+    - PHPSESSID=9UcVkp9LTOLv%2CNu82g2hX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:27:38 GMT
+recorded_at: Wed, 21 Jun 2017 02:35:40 GMT
