--- a/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
+++ b/www.nass.gov.ng/d4d5104070907d114e61ea79bb2dced335c954cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:37:38 GMT
+    - Wed, 21 Jun 2017 02:43:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=h3elOeVD2F1aZtzw8IBkX3; path=/
+    - PHPSESSID=dZJ0tlups3WBoG7yUNY%2Cy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:37:38 GMT
+recorded_at: Wed, 21 Jun 2017 02:43:32 GMT
