--- a/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
+++ b/www.nass.gov.ng/749667756d609eaac0d25df15185b9fd30c0a373.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:40:03 GMT
+    - Wed, 21 Jun 2017 02:45:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=y635G%2CyjJR3zUG4QE6IbN1; path=/
+    - PHPSESSID=oSJJ5lX3dQD89N4vdGmoP2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:40:03 GMT
+recorded_at: Wed, 21 Jun 2017 02:45:25 GMT
