--- a/www.nass.gov.ng/28f9739b1f5254760ad96d61ba586d22f2d327cc.yml
+++ b/www.nass.gov.ng/28f9739b1f5254760ad96d61ba586d22f2d327cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:45:21 GMT
+    - Wed, 21 Jun 2017 02:48:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OSlkJ%2COMgOuBanchK7mkY2; path=/
+    - PHPSESSID=LQuY39RriNHkYKmhVQr5j1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:45:21 GMT
+recorded_at: Wed, 21 Jun 2017 02:48:57 GMT
