--- a/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
+++ b/www.nass.gov.ng/bd77c292a8fded410ada5a0f412ed577e051e358.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:46:36 GMT
+    - Wed, 21 Jun 2017 02:49:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gFd%2CXwDcLuQEx83p2f-N40; path=/
+    - PHPSESSID=T6kypEJpb9FoprMVxRVgH2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:46:36 GMT
+recorded_at: Wed, 21 Jun 2017 02:49:37 GMT
