--- a/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
+++ b/www.nass.gov.ng/b5f411c7f1c2df9f99f5564f4b3b387cdc91e689.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:49:05 GMT
+    - Wed, 21 Jun 2017 02:51:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0lLfE0e6QPWnG-KHuNB5T3; path=/
+    - PHPSESSID=jmC76IzSRb6Od%2CPsd3MCc2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:49:05 GMT
+recorded_at: Wed, 21 Jun 2017 02:51:19 GMT
