--- a/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
+++ b/www.nass.gov.ng/92565d55660fbc44b8790f3a8634563c421f571e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:53:29 GMT
+    - Wed, 21 Jun 2017 02:55:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uyw4p2WEisYekYebQkZET1; path=/
+    - PHPSESSID=rcJ0sijNo%2CqQuZwsTA1OR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:53:29 GMT
+recorded_at: Wed, 21 Jun 2017 02:55:16 GMT
