--- a/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
+++ b/www.nass.gov.ng/9849597009c6cbde454c18d753f1f2d516b77434.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 09:56:52 GMT
+    - Wed, 21 Jun 2017 02:57:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qCMTlwnPKqs%2CBiRyrDDXf1; path=/
+    - PHPSESSID=O68S1GJcU7%2CZ3loI6M2TT0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 09:56:52 GMT
+recorded_at: Wed, 21 Jun 2017 02:57:49 GMT
