--- a/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
+++ b/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:01:00 GMT
+    - Wed, 21 Jun 2017 03:00:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q0bwckV-ckYx%2CbIwZ02iq3; path=/
+    - PHPSESSID=WlvSy%2CTzYyl31JfbMMetD0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:01:00 GMT
+recorded_at: Wed, 21 Jun 2017 03:00:41 GMT
