--- a/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
+++ b/www.nass.gov.ng/b2bc168c207a79bb6fa26ebb701c5d857c846bbe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:11:31 GMT
+    - Wed, 21 Jun 2017 03:11:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YE%2CJRepP20497zCLROH0Y1; path=/
+    - PHPSESSID=WbxAOHjri%2CvguWv0LDaNo1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:11:31 GMT
+recorded_at: Wed, 21 Jun 2017 03:11:12 GMT
