--- a/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
+++ b/www.nass.gov.ng/d1071cf050b2d3405f6db59a5513ef9e5231222b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:13:12 GMT
+    - Wed, 21 Jun 2017 03:12:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XYfP6z%2ChuysDg77374zL93; path=/
+    - PHPSESSID=CUH62uBT8VtaehZ67V0Zo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:13:12 GMT
+recorded_at: Wed, 21 Jun 2017 03:12:26 GMT
