--- a/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
+++ b/www.nass.gov.ng/f967d70812a594c54f3aa36da7155b3b13979257.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:15:06 GMT
+    - Wed, 21 Jun 2017 03:14:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p3WK9s%2CSodjzgLU9oRzN22; path=/
+    - PHPSESSID=7YOArpzTnE0Sg5zVQNABj2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:15:06 GMT
+recorded_at: Wed, 21 Jun 2017 03:14:12 GMT
