--- a/www.nass.gov.ng/f259e3c11f91dc79aacead86c6eb7f5977763090.yml
+++ b/www.nass.gov.ng/f259e3c11f91dc79aacead86c6eb7f5977763090.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:17:27 GMT
+    - Wed, 21 Jun 2017 03:17:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kh8B1EeKtNbgUo%2C5YP8q41; path=/
+    - PHPSESSID=P5AiwgQk8-eB56CMw3QU01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:17:27 GMT
+recorded_at: Wed, 21 Jun 2017 03:17:13 GMT
