--- a/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
+++ b/www.nass.gov.ng/370e6b6dbd5e2db8bb9a295aba6d071f112e141f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:19:54 GMT
+    - Wed, 21 Jun 2017 03:19:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rZn-yJ%2C6WLaQGO2EHhvFt0; path=/
+    - PHPSESSID=DaSFfV28-4SVQbf4OOI5c2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:19:54 GMT
+recorded_at: Wed, 21 Jun 2017 03:19:04 GMT
