--- a/www.nass.gov.ng/9f70f21c859151624596c06d2fd674392ce6f85b.yml
+++ b/www.nass.gov.ng/9f70f21c859151624596c06d2fd674392ce6f85b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:23:16 GMT
+    - Wed, 21 Jun 2017 03:22:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k8hYZycXD9t6iYjd0jhrv0; path=/
+    - PHPSESSID=K2u%2Cq7ZnyfRoOejLkWGHD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:23:16 GMT
+recorded_at: Wed, 21 Jun 2017 03:22:47 GMT
