--- a/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
+++ b/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:24:46 GMT
+    - Wed, 21 Jun 2017 03:23:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=S49G%2CxgYc1Z1n1uYA79VE2; path=/
+    - PHPSESSID=uxsyF6eQ8xfdjSune7d3Q2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:24:46 GMT
+recorded_at: Wed, 21 Jun 2017 03:23:31 GMT
