--- a/www.nass.gov.ng/4097dae74ae9550e9f804c4f88359e65b5dfa7d1.yml
+++ b/www.nass.gov.ng/4097dae74ae9550e9f804c4f88359e65b5dfa7d1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:32:14 GMT
+    - Wed, 21 Jun 2017 03:30:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HcxcVDJcF1DOscWPIR-ec2; path=/
+    - PHPSESSID=tu3msGqd%2CP57z44kCyOuk3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:32:14 GMT
+recorded_at: Wed, 21 Jun 2017 03:30:07 GMT
