--- a/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
+++ b/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:35:52 GMT
+    - Wed, 21 Jun 2017 03:34:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bvSrCeZSk5mLZLCW8ey0f3; path=/
+    - PHPSESSID=H%2CSKBp1zpVCWEFaXPjJ8Q0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:35:52 GMT
+recorded_at: Wed, 21 Jun 2017 03:34:43 GMT
