--- a/www.nass.gov.ng/a53e8dcb5212ecccb4366fee021d13243657beba.yml
+++ b/www.nass.gov.ng/a53e8dcb5212ecccb4366fee021d13243657beba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:42:00 GMT
+    - Wed, 21 Jun 2017 03:39:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=corKV62n8KdbQ1jzHDf4l1; path=/
+    - PHPSESSID=L7bUpPtE2t%2C%2C-se3gw2Ni2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:42:00 GMT
+recorded_at: Wed, 21 Jun 2017 03:39:20 GMT
