--- a/www.nass.gov.ng/c3a8da3cb57fb9088aa3d5f8e5191a7321893bbc.yml
+++ b/www.nass.gov.ng/c3a8da3cb57fb9088aa3d5f8e5191a7321893bbc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:49:56 GMT
+    - Wed, 21 Jun 2017 03:48:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7co%2CPC5nTq9p8qRDKNk9B0; path=/
+    - PHPSESSID=SEHpfbKd6Zj%2CJKKNuvK%2CY2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:49:56 GMT
+recorded_at: Wed, 21 Jun 2017 03:48:06 GMT
