--- a/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
+++ b/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:51:21 GMT
+    - Wed, 21 Jun 2017 03:49:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AEm7pVt666ocSP8fyeE162; path=/
+    - PHPSESSID=sL%2CflJ2%2C2ooG3Yb2GUdr72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:51:21 GMT
+recorded_at: Wed, 21 Jun 2017 03:49:45 GMT
