--- a/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
+++ b/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:54:42 GMT
+    - Wed, 21 Jun 2017 03:54:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B0MpzUx5uZ6AM-Bzq6kBJ0; path=/
+    - PHPSESSID=lTjZMsyRg2%2CVyr4adu0U23; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:54:42 GMT
+recorded_at: Wed, 21 Jun 2017 03:54:02 GMT
