--- a/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
+++ b/www.nass.gov.ng/a9d9b9708d3bd748c419f7bfe64716d9b268dec7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 10:58:05 GMT
+    - Wed, 21 Jun 2017 03:56:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mZ0lHVrC%2CHl5wVr0fvuVQ3; path=/
+    - PHPSESSID=zXlPawRlyJ02FNSeb6PpX1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 10:58:05 GMT
+recorded_at: Wed, 21 Jun 2017 03:56:28 GMT
