--- a/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
+++ b/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:00:33 GMT
+    - Wed, 21 Jun 2017 03:58:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DGNvNvED%2CUr1uVsLMAB7l3; path=/
+    - PHPSESSID=BKPOErW-PZy1JRome5KSG0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:00:33 GMT
+recorded_at: Wed, 21 Jun 2017 03:58:43 GMT
