--- a/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
+++ b/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:01:36 GMT
+    - Wed, 21 Jun 2017 03:59:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mPtgrkvNvkPs7wsK4AI302; path=/
+    - PHPSESSID=Q0eNssgsd%2CeDRq9E6jLP53; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:01:36 GMT
+recorded_at: Wed, 21 Jun 2017 03:59:36 GMT
