--- a/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
+++ b/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:06:08 GMT
+    - Wed, 21 Jun 2017 04:04:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=k6esHcmGqRQmnyjU48wed3; path=/
+    - PHPSESSID=iYhIw0xyj00aKE-S0V%2CHO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:06:08 GMT
+recorded_at: Wed, 21 Jun 2017 04:04:15 GMT
