--- a/www.nass.gov.ng/27c4d49997cf5306e3f44fa62d57ab70609ab9a8.yml
+++ b/www.nass.gov.ng/27c4d49997cf5306e3f44fa62d57ab70609ab9a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Jun 2017 11:11:25 GMT
+    - Wed, 21 Jun 2017 04:10:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=grc0w6t5nVpq1B4WihfDb3; path=/
+    - PHPSESSID=ND8P5Qc-0RxwhUxyCRmh%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Jun 2017 11:11:25 GMT
+recorded_at: Wed, 21 Jun 2017 04:10:56 GMT
